--- a/src/plugins/GoogleDrivePlugin/packages.config
+++ b/src/plugins/GoogleDrivePlugin/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Paket" version="5.181.1" targetFramework="net46" />
+  <package id="Google.Apis" version="1.36.1" targetFramework="net46" />
+  <package id="Google.Apis.Auth" version="1.36.1" targetFramework="net46" />
+  <package id="Google.Apis.Core" version="1.36.1" targetFramework="net46" />
+  <package id="Google.Apis.Drive.v3" version="1.36.1.1393" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
+  <package id="Paket" version="5.184.0" targetFramework="net46" />
 </packages>
