--- a/tests/WpfControlsLib.Tests/WpfControlsLib.Tests.csproj
+++ b/tests/WpfControlsLib.Tests/WpfControlsLib.Tests.csproj
@@ -53,6 +53,9 @@
       <Name>WpfControlsLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6'">
