--- a/src/plugins/GoogleDrivePlugin/GoogleDrivePlugin.csproj
+++ b/src/plugins/GoogleDrivePlugin/GoogleDrivePlugin.csproj
@@ -44,13 +44,19 @@
     <Reference Include="Google.Apis.Core, Version=1.36.1.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Google.Apis.Core.1.36.1\lib\net45\Google.Apis.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Google.Apis.Drive.v3, Version=1.36.1.1393, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Google.Apis.Drive.v3.1.36.1.1393\lib\net45\Google.Apis.Drive.v3.dll</HintPath>
+    <Reference Include="Google.Apis.Drive.v3, Version=1.36.1.1407, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Google.Apis.Drive.v3.1.36.1.1407\lib\net45\Google.Apis.Drive.v3.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.Apis.Oauth2.v2, Version=1.36.1.1404, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Google.Apis.Oauth2.v2.1.36.1.1404\lib\net45\Google.Apis.Oauth2.v2.dll</HintPath>
     </Reference>
     <Reference Include="Google.Apis.PlatformServices, Version=1.36.1.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Google.Apis.1.36.1\lib\net45\Google.Apis.PlatformServices.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -76,6 +82,7 @@
       <DependentUpon>LogoutBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="GoogleDrivePluginCore.cs" />
+    <Compile Include="Model\ClientSecret\ClientSecretParams.cs" />
     <Compile Include="Model\EventArguments\FileListArgs.cs" />
     <Compile Include="Model\EventArguments\FileMetaInfo.cs" />
     <Compile Include="Model\GoogleDriveModel.cs" />
@@ -135,7 +142,9 @@
     <Resource Include="ToolbarIcons\CloudDownload.png" />
     <Resource Include="ToolbarIcons\CloudUpload.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include=".gitignore" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
       <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
@@ -145,6 +154,9 @@
       <Project>{1dcb1d77-ab11-404c-bce4-8eb7bf8f549d}</Project>
       <Name>WpfControlsLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
