--- a/src/plugins/GoogleDrivePlugin/GoogleDrivePlugin.csproj
+++ b/src/plugins/GoogleDrivePlugin/GoogleDrivePlugin.csproj
@@ -116,6 +116,7 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="paket.references" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
