--- a/src/plugins/SamplePlugin/SamplePlugin.csproj
+++ b/src/plugins/SamplePlugin/SamplePlugin.csproj
@@ -55,6 +55,9 @@
       <Name>Repo</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
