--- a/src/plugins/GoogleDrivePlugin/packages.config
+++ b/src/plugins/GoogleDrivePlugin/packages.config
@@ -6,4 +6,5 @@
   <package id="Google.Apis.Drive.v3" version="1.36.1.1407" targetFramework="net46" />
   <package id="Google.Apis.Oauth2.v2" version="1.36.1.1404" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
+  <package id="Paket" version="5.181.1" targetFramework="net46" />
 </packages>
