--- a/src/SmartGreenhouse/SmartGreenhouse.csproj
+++ b/src/SmartGreenhouse/SmartGreenhouse.csproj
@@ -71,6 +71,10 @@
       <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
       <Name>EditorPluginInterfaces</Name>
     </ProjectReference>
+    <ProjectReference Include="..\GeneratorForGH\GeneratorForGH.csproj">
+      <Project>{64c8616e-cefc-4341-a014-dc0e2af6e680}</Project>
+      <Name>GeneratorForGH</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PluginManager\PluginManager.csproj">
       <Project>{8b9c8d76-65b3-4a01-9d6f-b6192a823642}</Project>
       <Name>PluginManager</Name>
@@ -137,10 +141,6 @@
     <ProjectReference Include="..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
       <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
       <Name>EditorPluginInterfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Generator\Generator.csproj">
-      <Project>{534e67e4-5ceb-4817-b0db-9f692c90dd08}</Project>
-      <Name>Generator</Name>
     </ProjectReference>
     <ProjectReference Include="..\PluginManager\PluginManager.csproj">
       <Project>{8b9c8d76-65b3-4a01-9d6f-b6192a823642}</Project>
