--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -76,6 +76,7 @@
     <Content Include="Data\test.rns">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Compile Include="InstantiationSemanticsTests\DualInstantiationTests.fs" />
     <Compile Include="DataModelTests.fs" />
     <Compile Include="DataRepoTest.fs" />
     <Compile Include="DataElementTests.fs" />
