--- a/src/plugins/OclPlugin/packages.config
+++ b/src/plugins/OclPlugin/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr4.Runtime.Standard" version="4.7.1.1" targetFramework="net462" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net461" developmentDependency="true" />
 </packages>
