Refactored Core Model and all related stuff (except Data Layer) into separate module, some renaming

--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -71,6 +71,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Properties\AssemblyInternalsVisibleTo.fs" />
     <Compile Include="Exceptions.fs" />
+    <Compile Include="Helpers.fs" />
     <Compile Include="DataLayer\DataLayer.fs" />
     <Compile Include="DataLayer\DataElement.fs" />
     <Compile Include="DataLayer\DataEdge.fs" />
@@ -79,19 +80,20 @@
     <Compile Include="DataLayer\DataNode.fs" />
     <Compile Include="DataLayer\DataModel.fs" />
     <Compile Include="DataLayer\DataRepo.fs" />
+    <Compile Include="DataLayer\IModelBuilder.fs" />
     <Compile Include="Serializer\DataObjects.fs" />
     <Compile Include="Serializer\Serializer.fs" />
     <Compile Include="Serializer\Deserializer.fs" />
-    <Compile Include="CoreSemanticLayer.fs" />
+    <Compile Include="CoreModel\CoreSemantic.fs" />
+    <Compile Include="CoreModel\CoreModel.fs" />
+    <Compile Include="CoreModel\ModelCreator.fs" />
     <Compile Include="InfrastructureSemanticLayer.fs" />
-    <Compile Include="ModelBuilders\IModelBuilder.fs" />
-    <Compile Include="ModelBuilders\InfrastructureMetamodelBuilder.fs" />
     <Compile Include="ModelBuilders\LanguageMetamodelBuilder.fs" />
+    <Compile Include="ModelBuilders\InfrastructureMetamodelBuilder.fs" />
+    <Compile Include="ModelBuilders\RobotsMetamodelBuilder.fs" />
     <Compile Include="ModelBuilders\RobotsTestModelBuilder.fs" />
     <Compile Include="ModelBuilders\AirSimMetamodelBuilder.fs" />
     <Compile Include="ModelBuilders\AirSimModelBuilder.fs" />
-    <Compile Include="ModelBuilders\CoreMetametamodelBuilder.fs" />
-    <Compile Include="ModelBuilders\Copy of RobotsMetamodelBuilder.fs" />
     <Compile Include="FacadeLayer.fs" />
     <Compile Include="FacadeLayer\Attribute.fs" />
     <Compile Include="FacadeLayer\Element.fs" />
