--- a/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
+++ b/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
@@ -45,6 +45,7 @@
     </CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,6 +60,7 @@
     <Compile Include="EdgeEventArgs.cs" />
     <Compile Include="ElementEventArgs.cs" />
     <Compile Include="IConsole.cs" />
+    <Compile Include="IElementProvider.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="IPlugin.cs" />
     <Compile Include="IPalette.cs" />
