--- a/tests/PluginLibrary.Tests/PluginLibrary.Tests.csproj
+++ b/tests/PluginLibrary.Tests/PluginLibrary.Tests.csproj
@@ -41,6 +41,7 @@
     <OutputPath>bin\MonoRelease\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Content Include="app.config" />
