--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -92,6 +92,8 @@
     <Compile Include="ModelBuilders\AirSimMetamodelBuilder.fs" />
     <Compile Include="ModelBuilders\AirSimModelBuilder.fs" />
     <Compile Include="ModelBuilders\CoreMetametamodelBuilder.fs" />
+    <Compile Include="ModelBuilders\ConstraintsMetamodelBuilder.fs" />
+    <Compile Include="ModelBuilders\ConstraintsTestModelBuilder.fs" />
     <Compile Include="FacadeLayer.fs" />
     <Compile Include="FacadeLayer\Attribute.fs" />
     <Compile Include="FacadeLayer\Element.fs" />
