--- a/src/plugins/ConstraintsPlugin/ConstraintsPlugin.csproj
+++ b/src/plugins/ConstraintsPlugin/ConstraintsPlugin.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SamplePlugin</RootNamespace>
     <AssemblyName>SamplePlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -42,6 +42,13 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="QuickGraph, Version=3.6.61114.0, Culture=neutral, PublicKeyToken=f3fb40175eec2af3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\QuickGraphPCL\lib\portable-win+net4+sl5+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\QuickGraph.dll</HintPath>
+    </Reference>
+    <Reference Include="QuickGraph.Graphviz">
+      <HintPath>..\..\..\packages\QuickGraphPCL\lib\portable-win+net4+sl5+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\QuickGraph.Graphviz.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,10 +56,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstraintsCheckSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConstraintsPlugin.cs" />
-    <Compile Include="Views\Controls\ConstraintsPanel.xaml.cs">
-      <DependentUpon>ConstraintsPanel.xaml</DependentUpon>
+    <Compile Include="Views\Controls\ConstraintsScene.xaml.cs">
+      <DependentUpon>ConstraintsScene.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Controls\ConstraintsPalette.xaml.cs">
+      <DependentUpon>ConstraintsPalette.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Controls\ConstraintsUnit.xaml.cs">
       <DependentUpon>ConstraintsUnit.xaml</DependentUpon>
@@ -62,6 +73,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\ConstraintsMatcher\ConstraintsMatcher.csproj">
+      <Project>{10456fba-b53a-486a-811a-96a5e962b026}</Project>
+      <Name>ConstraintsMatcher</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\EditorPluginInterfaces\EditorPluginInterfaces.csproj">
       <Project>{6e5f1b5d-f165-4cec-a240-8887ebd28e3b}</Project>
       <Name>EditorPluginInterfaces</Name>
@@ -79,7 +94,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\Controls\ConstraintsPanel.xaml">
+    <Page Include="Views\Controls\ConstraintsScene.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Controls\ConstraintsPalette.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
