--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Controls\Scene\EventArguments\EdgeSelectedEventArgs.cs" />
     <Compile Include="Controls\Scene\EventArguments\ElementAddedEventArgs.cs" />
     <Compile Include="Controls\Scene\EventArguments\ElementRemovedEventArgs.cs" />
+    <Compile Include="Controls\Scene\NewVertexName.cs" />
     <Compile Include="Controls\Scene\Geometry.cs" />
     <Compile Include="Controls\Scene\IElementProvider.cs" />
     <Compile Include="Controls\Scene\EventArguments\NodeSelectedEventArgs.cs" />
@@ -149,6 +150,7 @@
     <Compile Include="Constraints\ConstraintsWindow.xaml.cs" />
     <Compile Include="Controls\Console\AppConsoleViewModel.cs" />
     <Compile Include="Controller\UndoRedo\UndoRedoStack.cs" />
+    <Compile Include="Model\PositionsLoad.cs" />
     <Compile Include="Properties\AssemblyInternalsVisibleTo.cs" />
     <Compile Include="ViewModel\AttributeViewModel.cs" />
     <Compile Include="Controls\Scene\EdgeBlueprint.cs" />
